Fixed a layout issue with archives across years

--- a/contents/css/all.styl
+++ b/contents/css/all.styl
@@ -240,6 +240,11 @@ MediumColumns = 8
     ol
       row(6)
 
+      &>li
+        row(6,6)
+        float left
+        clear left
+
       .year
         column(1, 6)
 
@@ -276,6 +281,9 @@ RoomyColumns = 10
   section.archive, section.series
     ol
       row(8)
+
+      &>li
+        row(8,8)
 
       .year
         column(1, 8)
